# solana-demo-01

./: .env.example  .gitignore  .tool-versions  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  test-wallet.json  vercel.json
.cursor/rules/: bnpl-flow.mdc  bnpl-implementation.mdc  frontend-structure.mdc  project-overview.mdc  smart-contract-updates.mdc  solana-program.mdc
programs/stake-pool/: Cargo.toml  README.md
programs/stake-pool/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/bnpl/: page.tsx
src/app/history/: page.tsx
src/app/payment/: page.tsx
src/app/settings/: page.tsx
src/app/stake/: page.tsx
src/app/staking/: page.tsx
src/app/test-cards/: page.tsx
src/components/: PaymentForm.tsx  TestCardInfo.tsx  app-header.tsx  client-layout.tsx  credit-limit-display.tsx  header.tsx  main-nav.tsx  nav-menu.tsx  payment-form.tsx  purchase-menu.tsx  stripe-elements-provider.tsx  user-nav.tsx  wallet-provider.tsx
src/components/account/: account-data-access.tsx  account-detail-feature.tsx  account-list-feature.tsx  account-ui.tsx
src/components/bnpl/: credit-limit.tsx  transaction-form.tsx  transaction-history.tsx
src/hooks/: use-devnet-staking.ts  use-marinade-staking.ts  use-payment.ts  use-sol-purchase.ts  use-stake-pool.ts  use-stripe-payment.ts
src/lib/: bigint-polyfill.ts  constants.ts  devnet-staking-service.ts  marinade-service.ts  marinade.ts  payment-service.ts  stripe-client-config.ts  stripe-config.ts  stripe.ts
src/types/: bn.d.ts  stake-pool.ts
(+25 files in other folders)
